--- a/composer.json
+++ b/composer.json
@@ -23,17 +23,17 @@
         "illuminate/support": "^11.0||^12.0"
     },
     "require-dev": {
-        "inertiajs/inertia-laravel": "^1.2||^2.0",
         "larastan/larastan": "^3.0",
         "laravel/pint": "^1.18",
         "nunomaduro/collision": "^8.1",
         "orchestra/testbench": "^9.0.0||^10.0.0",
-        "pestphp/pest": "^4.0.0",
-        "pestphp/pest-plugin-arch": "^4.0.0",
-        "pestphp/pest-plugin-laravel": "^4.0.0",
+        "pestphp/pest": "^3.5.1",
+        "pestphp/pest-plugin-arch": "^3.0.0",
         "phpstan/extension-installer": "^1.4.3",
         "phpstan/phpstan-deprecation-rules": "^2.0.1",
-        "phpstan/phpstan-phpunit": "^2.0.3"
+        "phpstan/phpstan-phpunit": "^2.0.3",
+        "inertiajs/inertia-laravel": "^1.2||^2.0",
+        "pestphp/pest-plugin-laravel": "^3.0"
     },
     "autoload": {
         "psr-4": {
